--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,71 @@
   box-sizing:border-box;
 }
 
+.clearfix:after {
+  display: table;
+  clear: both;
+  content: "";
+}
+
 body, html {
+  font-family: 'Teko', sans-serif;
   height: 100%;
   margin: 0;
 }
 
+header, footer{
+  background-color: #1B264F;
+  color: white;
+  padding: 0;
+  margin: 0;
+}
+
+nav {
+  float: right;
+  vertical-align: middle;
+}
+
+h1 {
+  font-size: 40px;
+  margin: 0;
+  padding: 5px;
+}
+
 h2 {
-  font-family: 'Teko', sans-serif;
   font-weight: bold;
+  margin: 0;
+  padding: 0;
+}
+
+nav {
+  padding: 0;
+  margin: 0;
+}
+
+nav a{
+  color:white;
+  text-decoration: none;
+  position: relative;
+}
+
+div.homeblock {
+  position: relative;
+}
+
+div.homeblock h2 {
+  text-transform: uppercase;
+  font-size: 40px;
+  background-color: rgba(27, 38, 79, 0.6);
+  padding: 5px;
+  width: 400px;
+  height: 70px;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -200px;
+  margin-top: -35px;
+  vertical-align: middle;
 }
 
 .Africa { 
