--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,10 @@
   content: "";
 }
 
-body, html {
+body {
   font-family: 'Teko', sans-serif;
   height: 100%;
-  margin: 0;
+  margin: 0 0 30px 0;
 }
 
 header, footer{
@@ -19,6 +19,19 @@ header, footer{
   color: white;
   padding: 0;
   margin: 0;
+}
+
+footer p {
+  margin: 0;
+  padding: 5px;
+}
+
+#footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height:30px;
+  width:100%;
 }
 
 nav {
@@ -32,6 +45,11 @@ h1 {
   padding: 5px;
 }
 
+h1 a {
+  text-decoration: none;
+  letter-spacing: 2px;
+}
+
 h2 {
   font-weight: bold;
   margin: 0;
@@ -42,8 +60,12 @@ h2 a {
   text-decoration: none;
 }
 
+a:visited {
+  color: inherit;
+}
+
 nav {
-  padding: 0;
+  padding: 0 5px 10px 0;
   margin: 0;
 }
 
@@ -51,6 +73,7 @@ nav a{
   color:white;
   text-decoration: none;
   position: relative;
+  letter-spacing: 2px;
 }
 
 div.homeblock {
